# qt-spotify-app

./: .gitignore  Dockerfile  docker-compose.yml
config/: config.yml
qt_spotify_app/: CMakeLists.txt  backend.h  main.cpp
qt_spotify_app/backend/: CMakeLists.txt  apiclient.cpp  apiclient.h  backend.cpp  backend.h  playertracker.cpp  playertracker.h  spotifyauth.cpp
qt_spotify_app/network/: CMakeLists.txt
qt_spotify_app/network/ApiClient/: apiclient.cpp  apiclient.h
qt_spotify_app/network/SpotifyAuth/: spotifyauth.cpp  spotifyauth.h
qt_spotify_app/qml/: Main.qml  ProgressBar.qml
qt_spotify_app/utils/: CMakeLists.txt
qt_spotify_app/utils/PlayerTracker/: playertracker.h
